# aegg-apple

./: .gitignore  Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: adpcm.rs  asset.rs  audio.rs  board.rs  epd.rs  fat12.rs  flash.rs  main.rs  usblog.rs  video.rs
tools/: encode.py  probe_sizes.py
