[package]
name = "aegg-apple"
version = "0.1.0"
edition = "2024"
description = "Bad Apple!! video player firmware for the BornHack CyberAegg badge"
license = "MIT"

[dependencies]
# ── Embassy runtime ──────────────────────────────────────────────────────
embassy-nrf = { version = "0.9.0", features = [
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
    "qspi-multiwrite-flash",
    "defmt",
] }
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }

# ── Cortex-M runtime ─────────────────────────────────────────────────────
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7.5" }
static_cell = { version = "2.1.1" }

# ── Logging / panic ──────────────────────────────────────────────────────
defmt = { version = "1.1.1" }
defmt-rtt = { version = "1.3.0", features = ["disable-blocking-mode"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# ── Display ──────────────────────────────────────────────────────────────
embedded-hal = { version = "1.0" }
embedded-hal-bus = { version = "0.3", features = ["async"] }
ssd1675 = { version = "0.6", path = "./vendor/ssd1675" }

# There is exactly one configuration of this firmware — a single binary that
# plays the video — so there are deliberately no feature flags.

[profile.dev]
debug = 2
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.release]
debug = 0
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Identical code generation to `release`, but keeps the symbol table so that
# probe-rs can locate `_defmt_version_` and decode the RTT log stream.
# Stripping has no effect on flash usage — the loaded sections (.text / .data)
# are identical — it only removes the symbols probe-rs needs for defmt and for
# stack traces on panic / hardfault.
[profile.release-debug]
inherits = "release"
strip = false
debug = 2

# Optimise dependencies for size in dev builds too — a debug-built embassy +
# ssd1675 does not fit comfortably in 960K and is far too slow to drive video.
[profile.dev.package."*"]
opt-level = "z"
